ironically enough I had to remove the responsive layout in order to fix this on smaller displays... as I live and breath

--- a/static/src/sass/blocks/cmp-player-list.scss
+++ b/static/src/sass/blocks/cmp-player-list.scss
@@ -243,16 +243,3 @@
     }
   }
 }
-
-// Break the filters down to a separate line as soon as they can't fit.
-@media (max-width: 1350px) {
-  .player-list-filter-set {
-    display: block;
-    float: none;
-    clear: both;
-  }
-
-  .cmp-collection-search-filter {
-    margin-left: 0;
-  }
-}
